changed css to attempt to prevent projects getting clipped on mobile

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -53,7 +53,7 @@
         }
         .project {
             width: 50vw;
-            height: 25.5vh;
+            height: 30vh;
             line-height: .5rem;
             justify-content: space-between;
             
